# CMake-Study

./: .gitignore
01.HelloWorld/: CMakeLists.txt  app
02.HelloWorldLibrary/: CMakeLists.txt  app  foo.cpp
03.HierarchicalProject/: CMakeLists.txt
03.HierarchicalProject/lib/: CMakeLists.txt
03.HierarchicalProject/lib/hello2/: CMakeLists.txt  foo.cpp
03.HierarchicalProject/lib/main/: CMakeLists.txt  main.cpp
04.FindLibrary/: CMakeLists.txt  main.cpp
